@@ -75,6 +75,15 @@ left  |  right        ←  →          │     │
 					<li>Font size: Change font size used by the visualization. Useful for HiDPI screens.</li>
 				</ul>
 			</li>
+			<li>
+				Key-only options<br>
+				Options listed here does not provide an entry in the option GUI. You have to add them to the configuration file manually if they don't exist in it.
+				<ul>
+					<li>px py pz rx ry rz (automatically created if save viewport is set to true): Doubles. Saves the last viewport. (px,py,pz): Position of the camera. (rx,ry,rz): Orientation of the camera.</li>
+					<li>chActiveColor&lt;channel id 0..15&gt; : Unsigned 32-bit integers. Colors of sounding notes.</li>
+					<li>chInactiveColor&lt;channel id 0..15&gt; : Unsigned 32-bit integers. Colors of normal notes.</li>
+				</ul>
+			</li>
 		</ul>
 	</div>
 </body>
