@@ -1,3 +1,6 @@
+2016-06-02 0.8.2 alpha
+Add option to change note colors.
+
 2016-06-01 0.8.2 alpha
 Initial event modifier and event filter stub.
 
